# verlihub

./: .directory  .gitignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  INSTALL  LuaPlugin.dev  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  cmake_uninstall.cmake.in  config.h  config.h.cm  config.h.in  config_geoip  configure  configure.in  dirsettings.h.cm  libtool  verlihub.dev  verlihub.dsp  verlihub.dsw  verlihub.spec  verlihub_config  verlihub_config.cm  verlihub_config.in  verlihubdll.dev
plugins/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  verlihub-plugins.pot
plugins/CVS/: Entries  Repository
plugins/chatroom/: CMakeLists.txt  cconsole.cpp  cconsole.h  cpichatroom.cpp  cpichatroom.h  crooms.cpp  crooms.h
plugins/diakritika/: .directory  Makefile  Makefile.in  cdiacfg.h  cpidia.cpp
plugins/floodprot/: CMakeLists.txt  cfloodprotect.cpp  cfloodprotect.h  cpifloodprot.cpp  cpifloodprot.h
plugins/forbid/: CMakeLists.txt  cconsole.cpp  cconsole.h  cforbidden.cpp  cforbidden.h  cpiforbid.cpp  cpiforbid.h
plugins/iplog/: CMakeLists.txt  cconsole.cpp  cconsole.h  ciplog.cpp  ciplog.h  cpiiplog.cpp  cpiiplog.h
plugins/isp/: CMakeLists.txt  cconsole.cpp  cconsole.h  cisps.cpp  cisps.h  cpiisp.cpp  cpiisp.h
plugins/lua/: CMakeLists.txt  callbacks.cpp  callbacks.h  cconsole.cpp  cconsole.h  cluainterpreter.cpp  cluainterpreter.h  cpilua.cpp  cpilua.h
plugins/messenger/: CMakeLists.txt  cconsole.cpp  cconsole.h  cmsglist.cpp  cmsglist.h  cpimessanger.cpp  cpimessanger.h
plugins/pisg/: CMakeLists.txt  cpipisg.cpp  cpipisg.h  vh_pisg.in
plugins/plugman/: .directory  CMakeLists.txt  Makefile  Makefile.in  cconsole.cpp  cconsole.cpp~  cconsole.h  cpiplug.cpp  cpiplug.h  cplugs.cpp  cplugs.h
plugins/plugman/CVS/: Entries  Repository
plugins/python/: CMakeLists.txt  cconsole.cpp  cconsole.h  cpipython.cpp  cpipython.h  cpythoninterpreter.cpp  cpythoninterpreter.h  wrapper.cpp  wrapper.h
plugins/replacer/: CMakeLists.txt  cconsole.cpp  cconsole.h  cpireplace.cpp  cpireplace.h  creplacer.cpp  creplacer.h  creplacerworker.cpp  creplacerworker.h
plugins/stats/: CMakeLists.txt  cpistats.cpp  cpistats.h  cstats.cpp  cstats.h
scripts/: .directory  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  ccgraph  migration_0.9.8eto0.9.9a.in  regpinger  vh.in  vh_daemon.in  vh_gui.in  vh_gui_functions.in  vh_install  vh_install.in  vh_install_gui.in  vh_lib.in  vh_manage.in  vh_manage_cli.in  vh_migration_0.9.8eto0.9.9a.in  vh_migration_0.9.8eto1.0.in  vh_multihub.in  vh_regimporter.in  vh_runhub  vh_runhub.in  vh_runhub~  vh_setup.in
scripts/CVS/: Entries  Repository
src/: .directory  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cantiflood.cpp  cantiflood.h  casyncconn.cpp  casyncconn.h  casyncsocketserver.cpp  casyncsocketserver.h  cban.cpp  cban.h  cbanlist.cpp  cbanlist.h  cbanlist_interface.h  ccallbacklist.cpp  ccallbacklist.h  cchatconsole.cpp  cchatconsole.h  ccmdr.cpp  ccmdr.h  ccommand.cpp  ccommand.h  ccommandcollection.cpp  ccommandcollection.h  cconfigbase.cpp  cconfigbase.h  cconfigfile.cpp  cconfigfile.h  cconfigitembase.cpp  cconfigitembase.h  cconfmysql.cpp  cconfmysql.cpp~  cconfmysql.h  cconnbase.h  cconnchoose.cpp  cconnchoose.h  cconndc.cpp  cconndc.h  (+125 more)
stable/0.9.8d_RC2/: ChangeLog  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  configure  configure.in  libtool  mkinstalldirs  noapos  verlihub.spec  verlihub_config
stable/0.9.8d_RC2/docs/: Makefile  Makefile.am  Makefile.in  WIN_INSTALL.txt  ascii  configuring.txt  features.html  help  help.html  help.sql  params.php  plugins_devel.html  protocol.dia  setuphelp.sql  using.txt  verlihub.html
stable/0.9.8d_RC2/plugins/: Makefile  Makefile.in
stable/0.9.8d_RC2/scripts/: Makefile  Makefile.in  import_reglist_0.9.x_to_0.9.7.sql  odch2vh  runhub  vh_getdb  vh_install.in  vh_regnick  vh_runhub  vh_trigger
stable/0.9.8d_RC2/share/: Makefile
stable/0.9.8d_RC2/src/: Makefile  Makefile.am  Makefile.in  cantiflood.cpp  cantiflood.h  casyncconn.cpp  casyncconn.h  casyncsocketserver.cpp  casyncsocketserver.h  cban.cpp  cban.h  cbanlist.cpp  cchatconsole.cpp  cchatconsole.h  ccmdr.cpp  cconfigfile.cpp  cconfigitembase.cpp  cconfmysql.cpp  cconndc.cpp  cconndc.h  cconntypes.cpp  cconntypes.h  cdbconf.h  cdcconf.cpp  cdcconf.h  cdcconsole.cpp  cdcconsole.h  cdcproto.cpp  cdcproto.h  cdctag.cpp  cfreqlimiter.cpp  cinfoserver.cpp  cinfoserver.h  cmeanfrequency.h  cmutex.h  cmysql.cpp  cmysql.h  cobj.cpp  cpenaltylist.h  cprotocol.cpp  (+30 more)
trunk/diakritika/: Makefile  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  libtool
trunk/diakritika/CVS/: Repository
trunk/diakritika/src/: Makefile.am
trunk/lua/: .directory  AUTHORS  ChangeLog  Doxyfile  Makefile  Makefile.am  Makefile.cvs  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  config.h  config.h.in  config_lua  configure  configure.in  libtool  lua.kdevelop  lua.kdevelop.pcs  lua.kdevses  mkinstalldirs
trunk/lua/script/: .directory
trunk/lua/share/: .directory  Makefile  Makefile.am  Makefile.in
trunk/lua/src/: .directory  Makefile  Makefile.am  Makefile.in  callbacks.cpp  callbacks.h  cconsole.cpp  cconsole.h  cluainterpreter.cpp  cluainterpreter.h  cpilua.cpp  cpilua.h  curr_date_time.h
trunk/verlihub/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.cvs  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  config.h.in  config.status  configure  configure.in  dirsettings.h  libtool  verlihub.spec.in  verlihub_config
trunk/verlihub/lib/: Makefile.in
trunk/verlihub/plugins/: Makefile  Makefile.am  Makefile.in
trunk/verlihub/scripts/: Makefile  Makefile.in  vh_getdb  vh_install  vh_install.in  vh_install_gui.in  vh_regnick  vh_restart.in  vh_runhub  vh_runhub.in  vh_setup
trunk/verlihub/share/: Makefile
trunk/verlihub/src/: Makefile  Makefile.am  Makefile.in  casyncconn.cpp  casyncconn.h  casyncsocketserver.cpp  casyncsocketserver.h  cbanlist.cpp  cbanlist.h  cbanlist_interface.h  ccallbacklist.cpp  ccallbacklist.h  cchatconsole.cpp  cchatconsole.h  ccmdr.cpp  (+125 more)
(+274 files in other folders)
