AC_INIT(acinclude.m4) 

VERSION="0.1"
RELEASE=1
PACKAGE_NAME=diakritika

AC_SUBST(RELEASE)
AM_INIT_AUTOMAKE($PACKAGE_NAME, $VERSION)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_CHECK_HEADERS([stdlib.h string.h sys/socket.h sys/time.h unistd.h ostream string errno.h sys/poll.h])

AM_MAINTAINER_MODE
AC_PATH_LIB_LIBCONFIG
AC_MSG_RESULT([***
*** Checking VerliHub...
***
])   

AC_PATH_LIB(verlihub, [0 -nocheck], [], verlihub_config, [], [
                        CXXFLAGS="$CXXFLAGS $VERLIHUB_CFLAGS"
                        echo "adding $VERLIHUB_CFLAGS to CXXFLAGS"
                    ], [
                        echo " verlihub devel, or you need a path for the "
                        echo "verlihub_config script, you may also wat to try some --with-verlihub=/prefix  agruments"
                        exit -1
                    ])
AM_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile src/Makefile)

echo
echo "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-"
echo "			Diakritika Plugin			   "
echo "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-"
echo "Configure has completed successfully. Now you must run make."
echo "If make fails with errors, please consult the forums and see"
echo "if anyone else has had the same issue. The forums are located"
echo "here http://forums.verlihub-project.org"
echo "Extensive documentation is also available at the project website"
echo "which can be found here http://www.verlihub-project.org"
echo "Please feel free to join and register at the Verlihub suport"
echo "hub located here dchub://hub.verlihub-project.org:7777"
echo "-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-"
